<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:vFont="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/loginbg"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/loginContainerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/loginlogo"/>

                <com.firefighterscalendar.custom.CustomEditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_25"
                    android:ems="10"
                    android:hint="@string/email_address"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_theme_color"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="swiss_721_swa_ttf"/>

                <com.firefighterscalendar.custom.CustomEditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_5"
                    android:ems="10"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/light_theme_color"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="swiss_721_swa_ttf"/>

                <com.firefighterscalendar.custom.CustomTextView
                    android:id="@+id/textForgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dp_45"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="@dimen/dp_5"
                    android:text="@string/forgot_password"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="helvetica_ttf"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10">

        <com.firefighterscalendar.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/you_dont_have"
            android:textColor="@color/light_theme_color"
            android:textSize="@dimen/sp_14"
            vFont:typeface="swiss_721_swa_ttf"/>

        <com.firefighterscalendar.custom.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sp_14"
            vFont:typeface="swiss_721_swa_ttf"/>
    </LinearLayout>

    <com.firefighterscalendar.custom.CustomTextView
        android:id="@+id/textSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sp_20"
        vFont:typeface="swiss_721_swa_ttf"/>
</LinearLayout>
