<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:vFont="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_inner" />

    <com.firefighterscalendar.custom.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_theme"
        android:gravity="center"
        android:text="@string/selection_info"
        android:textColor="@color/light_theme_color"
        android:textSize="@dimen/sp_20"
        vFont:typeface="helvetica_ttf" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutCalendar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/dark_theme"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/sp_20">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/calander" />

                <com.firefighterscalendar.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/dark_theme"
                    android:gravity="center"
                    android:text="@string/printable_calendar"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="helvetica_Bold.ttf" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="13"
                    android:gravity="center"
                    android:text="Create a year-long heat wave with 12 months of firefighters"
                    android:textColor="@android:color/white"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutGreetingCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:background="@color/light_theme"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/greetingcard" />

                <com.firefighterscalendar.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:background="@color/dark_theme"
                    android:text="@string/greeting_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/sp_14"
                    vFont:typeface="helvetica_Bold.ttf" />

                <com.firefighterscalendar.custom.CustomTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:gravity="center"
                    android:text="Show someone that you care with a flammable greeting card."
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    vFont:typeface="helvetica_ttf" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:background="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/red_round"
                android:padding="@dimen/dp_15"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="@dimen/sp_20" />
        </FrameLayout>
    </RelativeLayout>
</LinearLayout>
