<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/toolbar_main" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_main_menu"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingTop="@dimen/dp_10">

                <LinearLayout
                    android:id="@+id/layoutDigitalCal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTop="@drawable/digital_calander"
                        android:text="@string/calendar"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_theme_color" />

                <LinearLayout
                    android:id="@+id/layoutFireFighter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTop="@drawable/firefighters"
                        android:gravity="center"
                        android:text="@string/gallery"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_theme_color" />

                <LinearLayout
                    android:id="@+id/layoutShop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/shopping" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="@dimen/dp_5"
                        android:text="@string/shop"
                        android:textColor="@color/red"
                        android:textSize="12sp" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/dp_15"
                android:layout_marginRight="@dimen/dp_15"
                android:background="@color/light_theme_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.50"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/dp_10">

                <LinearLayout
                    android:id="@+id/layoutGreetingCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTop="@drawable/greetingcards"
                        android:gravity="center"
                        android:text="@string/create"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_theme_color" />

                <LinearLayout
                    android:id="@+id/layoutCalendar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTop="@drawable/horn"
                        android:gravity="center"
                        android:text="@string/news"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/light_theme_color" />

                <LinearLayout
                    android:id="@+id/layoutMore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/dp_5"
                        android:drawableTop="@drawable/more_icon"
                        android:gravity="center"
                        android:text="More"
                        android:textColor="@color/red"
                        android:textSize="@dimen/sp_12" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
